# django-polls-app

./: Makefile  pyproject.toml
lorelai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
myapp/: db.sqlite3  manage.py
myapp/myapp/: settings.py  urls.py  wsgi.py
myapp/polls/: models.py  views.py
myapp/polls/migrations/: 0001_initial.py
myapp/polls/templates/polls/: detail.tmpl.html
tests/: test_lorelai.py
