[tool.poetry]
name = "lorelai"
version = "0.1.0"
description = ""
authors = ["mdncs <madalinamaria.bumb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
django-admin = "^1.3"

[tool.poetry.dev-dependencies]
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
